# briskcoin

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libbriskcoinkernel.pc.in  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  gui_issue.yml
.github/workflows/: ci.yml
.tx/: config
build-aux/m4/: bitcoin_qt.m4  briskcoin_find_bdb48.m4  briskcoin_qt.m4  briskcoin_subdir_to_include.m4
build_msvc/: .gitignore  README.md  briskcoin.sln  briskcoin_config.h.in  msvc-autogen.py  vcpkg.json
build_msvc/bench_briskcoin/: bench_bitcoin.vcxproj.in
build_msvc/briskcoin-cli/: briskcoin-cli.vcxproj
build_msvc/briskcoin-qt/: briskcoin-qt.vcxproj
build_msvc/briskcoin-tx/: briskcoin-tx.vcxproj
build_msvc/briskcoin-util/: briskcoin-util.vcxproj
build_msvc/briskcoin-wallet/: briskcoin-wallet.vcxproj
build_msvc/briskcoind/: briskcoind.vcxproj
build_msvc/fuzz/: fuzz.vcxproj
build_msvc/libbriskcoin_qt/: libbitcoin_qt.vcxproj
build_msvc/test_briskcoin/: test_bitcoin.vcxproj
build_msvc/test_briskcoin-qt/: test_bitcoin-qt.vcxproj
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
ci/lint/: 01_install.sh  04_install.sh  06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686_centos.sh  00_setup_env_i686_multiprocess.sh  00_setup_env_i686_no_ipc.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_native.sh  00_setup_env_mac_native_fuzz.sh  00_setup_env_native_asan.sh  00_setup_env_native_centos.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_msan.sh  00_setup_env_native_nowallet_libbriskcoinkernel.sh  00_setup_env_native_previous_releases.sh  00_setup_env_native_tidy.sh  00_setup_env_native_tsan.sh  00_setup_env_native_valgrind.sh  00_setup_env_s390x.sh  00_setup_env_win64.sh  01_base_install.sh  02_run_container.py  02_run_container.sh  03_test_script.sh  GetCMakeLogFiles.cmake  wrap-valgrind.sh  wrap-wine.sh
cmake/: briskcoin-build-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  secp256k1.cmake  tests.cmake  windows-app.manifest.in
cmake/module/: AddBoostIfNeeded.cmake  AddWindowsResources.cmake  CheckLinkerSupportsPIE.cmake  CheckSourceCompilesWithFlags.cmake  FindBerkeleyDB.cmake  FindLibevent.cmake  FindQRencode.cmake  FindQt.cmake  FindUSDT.cmake  FindZeroMQ.cmake  FlagsSummary.cmake  GenerateSetupNsi.cmake  GetTargetInterface.cmake  InstallBinaryComponent.cmake  Maintenance.cmake  ProcessConfigurations.cmake  TargetDataSources.cmake  TestAppendRequiredLibraries.cmake  TryAppendCXXFlags.cmake  TryAppendLinkerFlag.cmake  WarnAboutGlobalProperties.cmake
cmake/script/: Coverage.cmake  CoverageFuzz.cmake  CoverageInclude.cmake.in  GenerateBuildInfo.cmake  GenerateHeaderFromJson.cmake  GenerateHeaderFromRaw.cmake  cov_tool_wrapper.sh.in  macos_zip.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  gitian-build.sh  tidy_datadir.sh  valgrind.supp
contrib/asmap/: README.md  asmap-tool.py
contrib/debian/: copyright
contrib/devtools/: README.md  check-deps.sh  circular-dependencies.py  copyright_header.py  gen-briskcoin-conf.sh  gen-manpages.py  gen-manpages.sh  headerssync-params.py  security-check.py  (+7 more)
contrib/devtools/briskcoin-tidy/: CMakeLists.txt  README.md  briskcoin-tidy.cpp  example_logprintf.cpp  logprintf.cpp  logprintf.h  nontrivial-threadlocal.cpp  nontrivial-threadlocal.h
depends/: Makefile  README.md  description.md  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  briskcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  (+8 more)
doc/man/: Makefile  Makefile.am  briskcoin-cli.1  briskcoin-qt.1  briskcoin-tx.1  briskcoin-util.1  briskcoin-wallet.1  briskcoin.1  briskcoind.1
share/: genbuild.sh  setup.nsi.in
src/: .clang-tidy  CMakeLists.txt  Makefile  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  (+143 more)
src/kernel/: CMakeLists.txt  blockmanager_opts.h  briskcoinkernel.cpp  caches.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  disconnected_transactions.cpp  disconnected_transactions.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_removal_reason.cpp  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  warning.h
src/zmq/: CMakeLists.txt  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h  zmqutil.cpp  zmqutil.h
test/: CMakeLists.txt  README.md  config.ini.in  get_previous_releases.py
(+1768 files in other folders)
