dist_man1_MANS=

if BUILD_BRISKCOIND
  dist_man1_MANS+=briskcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=briskcoin-qt.1
endif

if BUILD_BRISKCOIN_CLI
  dist_man1_MANS+=briskcoin-cli.1
endif

if BUILD_BRISKCOIN_TX
  dist_man1_MANS+=briskcoin-tx.1
endif

if BUILD_BRISKCOIN_UTIL
  dist_man1_MANS+=briskcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BRISKCOIN_WALLET
  dist_man1_MANS+=briskcoin-wallet.1
endif
endif
